index.css
/* ... */
h2 {
  font-size: var(--h2-size);
  font-weight: 600;
}

h3 {
  font-size: var(--h3-size);
  font-weight: 500;
  letter-spacing: -0.0156rem;
  line-height: var(--h3-lheight);
}

h4 {
  font-size: var(--h4-size);
  font-weight: 500;
  letter-spacing: 0.0156rem;
}

h5 {
  font-size: var(--h5-size);
  font-weight: 500;
}

h6,
footer h3,
.card h3 {
  font-size: var(--h6-size);
  font-weight: 500;
  letter-spacing: -0.0156rem;
  line-height: var(--h6-lheight);
}

footer h3 {
  font-weight: 700;
}

p {
  margin: var(--spacing-md) 0;

  font-size: var(--p-size);
  font-weight: 400;
  line-height: var(--p-lheight);
}

a {
  color: var(--purple-1);
  text-decoration: none;
  font-weight: 500;

  transition: color 0.25s ease;
}

a:hover {
  color: var(--primary-accent);
}

button {
  border: none;

  font-family: var(--body-font);
  font-size: var(--button-size);
  font-weight: bold;
  letter-spacing: 0.0781rem;

  transition: color 0.15s ease;
}

button:hover {
  cursor: pointer;
}

.subtitle,
.subtitle2 {
  font-family: var(--heading-font);
  font-size: var(--subtitle-size);
  font-weight: 500;
  line-height: var(--subtitle-lheight);
}

.subtitle {
  color: var(--purple-1);
}

.subtitle2 {
  color: var(--blue-1);
}

.secondary-text {
  color: var(--text-grey);
  font-size: var(--secondary-text-size);
  letter-spacing: 0.0156rem;
  line-height: var(--secondary-text-lheight);
}

.filled-button {
  padding: var(--spacing-sm) var(--spacing-md);

  border-radius: var(--standard-radius);

  color: var(--text-light);
}

.navbar-button {
  background-color: rgba(250, 250, 250, 0.25);
}

.navbar-button:hover {
  background: rgba(250, 250, 250, 0.5);
}

.primary-button {
  background-color: var(--primary-accent);
}

.primary-button:hover {
  background-color: var(--primary-btn-hover);
}

.primary2-button {
  background-color: var(--purple-1);
}

.primary2-button:hover {
  background-color: var(--primary-accent);
}

.primary3-button {
  background-color: var(--blue-1);
  color: var(--primary-accent);
}

.primary3-button:hover {
  background-color: var(--bg-white);
}

.secondary-button,
.secondary2-button {
  background-color: transparent;
  padding: 0;
}

.secondary-button {
  color: var(--purple-2);
}

.secondary2-button {
  color: var(--blue-1);
}

.secondary-button:hover,
.secondary2-button:hover {
  opacity: 0.75;
}

.with-icon-blue,
.with-icon-dark,
.with-icon-light,
.with-icon-purple {
  display: flex;
  justify-content: center;
  align-items: center;
}

.with-icon-blue::after,
.with-icon-dark::after,
.with-icon-light::after,
.with-icon-purple::after {
  line-height: 0; /* Done to remove white space below pseudo-element. */

  transition: transform 0.25s ease;
}

.with-icon-blue:hover::after,
.with-icon-dark:hover::after,
.with-icon-light:hover::after,
.with-icon-purple:hover::after {
  transform: translateX(0.25rem);
}

.with-icon-blue::after {
  content: url("assets/arrow-right-blue.svg");
}

.with-icon-dark::after {
  content: url("assets/arrow-right-dark.svg");
}

.with-icon-light::after {
  content: url("assets/arrow-right-light.svg");
}

.with-icon-purple::after {
  content: url("assets/arrow-right-purple.svg");
}

.menu {
  display: flex;
  justify-content: center;

  list-style-type: none;
}

.menu > li {
  margin: 0 var(--spacing-md);
}

.menu > li > a {
  color: var(--text-light);
  font-weight: bold;
}

.menu > li:hover > a {
  text-decoration: underline;
}

header .hamburger {
  display: none;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;

  padding: 0.25rem 0;

  width: 3.125rem;
  height: 1.875rem;

  background-color: rgba(250, 250, 250, 0.5);
  border-radius: var(--standard-radius);
}

header .hamburger .bar {
  width: 50%;
  height: 10%;

  background-color: var(--bg-white);
}

.two-column {
  display: flex;
  flex-direction: row;

  box-sizing: border-box;

  width: 100%;
}

.two-column > .col-left,
.two-column > .col-right {
  display: flex;
  flex-direction: column;

  box-sizing: border-box;

  width: 50%;
}

.two-column > .col-left {
  padding-right: var(--spacing-md);
}

.two-column > .col-left > button {
  align-self: flex-start;

  margin-top: var(--spacing-md);
}

.two-column > .col-right {
  padding-left: var(--spacing-md);
}

.card-container {
  display: flex;
  flex-direction: row;

  margin: var(--spacing-lg) 0;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;

  box-sizing: border-box;

  padding: var(--spacing-sm) var(--spacing-md) var(--spacing-sm) 0;
}

.card img {
  height: 3.125rem;
  margin-bottom: var(--spacing-sm);
}

.hero-wrapper,
.partners-wrapper,
.platform-wrapper,
.graphics-wrapper,
.engineers-wrapper,
.why-wrapper,
.global-wrapper,
.events-wrapper,
.started-wrapper,
.footer-wrapper {
  display: flex;
  justify-content: center;

  box-sizing: border-box;

  width: 100%;
}

#canvas {
  position: absolute;
  top: -36.5rem;
  left: -50%;
  z-index: -1;

  width: 200%;
  height: 60.625rem;

  --gradient-color-1: #ef008f;
  --gradient-color-2: #6ec3f4;
  --gradient-color-3: #7038ff;
  --gradient-color-4: #ffba27;
  transform: rotate(-10deg);
}

.hero p {
  max-width: 30rem;
}

.hero img {
  height: 40rem;

  transform: translate(2rem, -4.25rem);
}

.hero > .col-right {
  align-items: flex-end;
}

.hero > .col-left > .two-column {
  margin: var(--spacing-md) 0 0 0;
}

.hero button:nth-of-type(1) {
  margin-right: var(--spacing-md);
}

.hero .side-by-side-buttons {
  display: flex;
}

.partners {
  display: grid;
  row-gap: var(--spacing-lg);
  column-gap: var(--spacing-md);
  grid-template-rows: repeat(2, minmax(0, 1fr));
  grid-template-columns: repeat(4, minmax(0, 1fr));

  margin: var(--spacing-md) 0 var(--spacing-xl) 0;
}

.partners img {
  height: 3.75rem;
  place-self: center;
}

.platform-wrapper,
.graphics-wrapper {
  background-color: var(--bg-light);
}

.platform {
  padding: var(--spacing-xl) 0;
}
/* ... */

